# software-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  gpu.sublime-project
src/: SoftwareRenderer.cpp  SoftwareRenderer.hpp  Vertex.hpp  main.cpp
stb_image/: stb_image.cpp
